--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@maskito/core": "^1.9.0",
     "@maskito/react": "^1.9.0",
     "@phosphor-icons/react": "^2.0.15",
+    "@pinata/sdk": "^2.1.0",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-avatar": "^1.0.4",
@@ -33,6 +34,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "cmdk": "^0.2.0",
+    "dotenv": "^16.3.1",
     "ethers": "^5.7.2",
     "localforage": "^1.10.0",
     "lucide-react": "^0.293.0",
